# winetasting

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
scripts/: wine_tasting.ipynb
winetasting/: __init__.py  example_guesses.csv  visuals.py  winetasting.py
